[gd_scene load_steps=13 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://eisberg.tscn" type="PackedScene" id=3]
[ext_resource path="res://smoke.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 28.0124, 24.0514 )

[sub_resource type="StyleBoxFlat" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.816406, 0.0191345, 0, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="StyleBoxFlat" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.389771, 0.534515, 0.96875, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="Curve" id=7]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0.000612883, 0.295898 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]

flags = 4
width = 2048
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.0
scale_random = 0.0
scale_curve = SubResource( 8 )
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Gravity", "Scale", "Spread" ]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 30.3273 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 32.6964, 31.2136 )

[node name="World" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="leftBound" type="Sprite" parent="." index="0"]

editor/display_folded = true
modulate = Color( 0.9375, 0, 0, 1 )
position = Vector2( -31.0316, -3820.27 )
scale = Vector2( 1, 141.493 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="StaticBody2D" type="StaticBody2D" parent="leftBound" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftBound/StaticBody2D" index="0"]

scale = Vector2( 1.65324, 1.30312 )
shape = SubResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="rightBound" type="Sprite" parent="." index="1"]

editor/display_folded = true
modulate = Color( 0.9375, 0, 0, 1 )
position = Vector2( 1219.03, -3792.8 )
scale = Vector2( 1, 141.493 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="StaticBody2D" type="StaticBody2D" parent="rightBound" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="rightBound/StaticBody2D" index="0"]

scale = Vector2( 1.65324, 1.30312 )
shape = SubResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="eisberg" parent="." index="2" instance=ExtResource( 3 )]

[node name="eisberg2" parent="." index="3" instance=ExtResource( 3 )]

position = Vector2( 931.714, -153.809 )

[node name="eisberg3" parent="." index="4" instance=ExtResource( 3 )]

position = Vector2( 341.662, -447.025 )

[node name="eisberg4" parent="." index="5" instance=ExtResource( 3 )]

position = Vector2( 841.215, -628.022 )

[node name="eisberg5" parent="." index="6" instance=ExtResource( 3 )]

position = Vector2( 464.74, -772.82 )

[node name="eisberg6" parent="." index="7" instance=ExtResource( 3 )]

position = Vector2( 808.635, -990.017 )

[node name="eisberg7" parent="." index="8" instance=ExtResource( 3 )]

position = Vector2( 345.282, -1123.95 )

[node name="eisberg8" parent="." index="9" instance=ExtResource( 3 )]

position = Vector2( 794.156, -1395.45 )

[node name="CanvasLayer" type="CanvasLayer" parent="." index="10"]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Control" type="Control" parent="CanvasLayer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -1.0
margin_right = -1.0
margin_bottom = -1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
_sections_unfolded = [ "Size Flags" ]

[node name="time" type="Label" parent="CanvasLayer/Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 1.0
margin_right = 41.0
margin_bottom = 15.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer" type="Timer" parent="CanvasLayer/Control/time" index="0"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = true

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/Control" index="1"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -46.0
margin_top = -26.0
margin_right = 101.0
margin_bottom = 11.0
rect_rotation = -90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 10.0
exp_edit = false
rounded = false
percent_visible = false
_sections_unfolded = [ "Percent", "Rect", "custom_styles" ]

[node name="Lives" type="ProgressBar" parent="CanvasLayer" index="1"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 5.0
step = 1.0
page = 0.0
value = 5.0
exp_edit = false
rounded = false
percent_visible = true

[node name="RigidBody2D" type="RigidBody2D" parent="." index="11"]

position = Vector2( 640.481, 511.429 )
input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 0.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 1
contact_monitor = true
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = 0.5
angular_velocity = 0.0
angular_damp = -1.0
_sections_unfolded = [ "Linear" ]

[node name="Camera2D" type="Camera2D" parent="RigidBody2D" index="0"]

position = Vector2( 4.01697, -246.814 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="icon" type="Sprite" parent="RigidBody2D" index="1"]

editor/display_folded = true
position = Vector2( -1.55786, -1.02429 )
scale = Vector2( 0.349319, 1 )
texture = ExtResource( 2 )

[node name="icon" type="Sprite" parent="RigidBody2D/icon" index="0"]

position = Vector2( 3.11902, 29.6234 )
scale = Vector2( 1.71342, 0.0982738 )
texture = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="RigidBody2D" index="2"]

emitting = true
amount = 20
lifetime = 15.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 9 )
texture = ExtResource( 4 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D" index="3"]

shape = SubResource( 1 )

[node name="PositionLeft" type="Position2D" parent="RigidBody2D" index="4"]

position = Vector2( -18.2939, 28.8268 )

[node name="PositionRight" type="Position2D" parent="RigidBody2D" index="5"]

position = Vector2( 17.5548, 28.8268 )

[node name="icon" type="Sprite" parent="." index="12"]

position = Vector2( 543.836, -18889.2 )
scale = Vector2( 12.9126, 3.38201 )
texture = ExtResource( 2 )

[node name="winner" type="Area2D" parent="." index="13" groups=[
"winner",
]]

editor/display_folded = true
position = Vector2( 607.518, -8321.56 )
scale = Vector2( 21.4051, 3.38201 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="icon2" type="Sprite" parent="winner" index="0"]

modulate = Color( 0.187683, 0.960938, 0, 1 )
scale = Vector2( 1, 1 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="winner" index="1"]

shape = SubResource( 6 )

[connection signal="timeout" from="CanvasLayer/Control/time/Timer" to="." method="_on_Timer_timeout"]

[connection signal="body_entered" from="RigidBody2D" to="." method="_on_RigidBody2D_body_entered"]


